src/test/ui/mismatched_types/issue-38371.stderr
error[E0308]: mismatched types
  --> $DIR/issue-38371.rs:14:8
   |
14 | fn foo(&foo: Foo) {  // illegal syntax
   |        ^^^^ expected struct `Foo`, found reference
   |
   = note: expected type `Foo`
   = note:    found type `&_`
   = help: did you mean `foo: &Foo`?

error: aborting due to previous error

